--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+ "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "start": "node dist/server.js", 
+      "lint": "eslint .",
+      "preview": "vite preview",
+      "tsc": "tsc --watch"
+    },
   "dependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -22,7 +26,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
   }
